fixed z-index for page container

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -7,6 +7,7 @@
 #page-container {
   position: relative;
   min-height: 90%;
+  z-index: -1;
 }
 
 .section-header {
